--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
     <h2>This is Yu-Lin</h2>
-<p>I'm hosted with GitHub Pages.</p>
+<p>And I'm so much cooler than Nick.</p>
 </body>
 </html>
