--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
     <h2>This is Yu-Lin</h2>
-<p>And I'm so much cooler than Nick.</p>
+<p>And I'm so much cooler than Nick. \n Lara steals food from the dining halls.</p>
+    
 </body>
 </html>
