--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
                 
               <p>
                   <a class="btn btn-primary btn-lg" href="https://github.com/yyang0087/yyang0087.github.io" role="button">GitHub</a>
-                    <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/yu-lin-yang-665923103" role="button">LinkedIn</a>
-                    <a class="btn btn-primary btn-lg" href="https://www.dropbox.com/s/q9tr4boxgd3so2t/Yu-Lin_Yang_Resume_2017.pdf?dl=0" role="button">Resume</a>
+                  <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/yu-lin-yang-665923103" role="button">LinkedIn</a>
+                  <a class="btn btn-primary btn-lg" href="https://www.dropbox.com/s/q9tr4boxgd3so2t/Yu-Lin_Yang_Resume_2017.pdf?dl=0" role="button">Resume</a>
                 
+              </p>
+              <p>
+                    Sample Projects (more to come):
+              </p>
+              <p>
+                    <a class="btn btn-primary btn-lg" href="http://yulinyang.me/web.gl_Globe_Terrorism" role="button">Web.Gl Global Terrorism Globe</a>
               </p>
             </div>
         </div>
