--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Sample Projects (more to come):
               </p>
               <p>
-                    <a class="btn btn-primary btn-lg" href="http://yulinyang.me/web.gl_Globe_Terrorism" role="button">Web.Gl Global Terrorism Globe</a>
+                    <a class="btn btn-primary btn-lg" href="http://yulinyang.me/GTA_Globe" role="button">Global Terrorism Attacks 3D Globe</a>
               </p>
             </div>
         </div>
