--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </form>
       <script>
           var contactform =  document.getElementById('contact-form');
-          contactform.setAttribute('action', 'https://formspree.io/' + 'triplexlink' + '@' + 'gmail' + '.' + 'com');
+          contactform.setAttribute('action', 'https://formspree.io/' + 'yyang0087' + '@' + 'gmail' + '.' + 'com');
       </script>
 
       <div class="container-fluid col-lg-6" id="icons">
