--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/prefixfree.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="theme-color" content="#042C45">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#042C45">
+  <meta name="msapplication-navbutton-color" content="#042C45">
 </head>
 
 
@@ -60,9 +63,9 @@
 
       <div class ="introduction">
 
-          <img class="icon" src="wp/yang.jpg" alt="Icon">
-          <h3>Yu-Lin Yang</h3>
-          <p><i>developer, <br> entrepeneur, <br> videographer.</i></p>
+          <!--<img class="icon" src="wp/yang.jpg" alt="Icon">-->
+          <h3>YU-LIN <b>YANG</b></h3>
+          <p><i>developer | entrepeneur | videographer</i></p>
       </div>
 
 
@@ -108,11 +111,11 @@
         <div class="about_text col-lg-6 col-md-6 fullheight" id="about_text_id">
             <div class="info">
               <h3>About me</h3>
-              <p>I'm a undergraduate student at the University of Wisconsin - Madison. I love to explore, tinker, and create. If I'm not doing school work, you can probably find me making videos, taking photos, or starting a new business.</p>
+              <p>I'm a undergraduate student at the University of Wisconsin - Madison. I love to explore, tinker, and create. If I'm not doing school work, you can probably find me making videos, taking photos, or starting a new business.</p><br>
               <p>I believe that all technology should be developed with the user or client in mind. When I work, I focus beyond the functionality of the product by concentrating on the experience of the user. 
-              </p>
+              </p><br>
               <p>If you have an idea for something amazing, crazy, or straight up impossible and need an extra hand, hit me up and I'm more than eager to explore the unknown with you.
-              </p>
+              </p><br>
               <p>You can find my resume <a href="https://www.dropbox.com/s/q9tr4boxgd3so2t/Yu-Lin_Yang_Resume_2017.pdf?dl=0">here.</a>
             </div><!-- info -->
         </div> <!-- doctor -->
@@ -126,11 +129,11 @@
 
 
   <div class="page" id="projects">
-    <div id="h2Title"><h2>Projects</h2></div>
+    <div id="h2Title"><h2>PROJECTS</h2></div>
     <div class="container-fluid">
       
       <div class="row">
-        <blockquote class="col-md-6 col-lg-6" id="janeh">
+        <blockquote class="col-md-6 col-lg-3" id="janeh">
           <div class="quote">
             <span class="intro"><a href="http://yulinyang.me/GTA_Globe/">3D Infographic of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)</a></span>
             <span class="more">  I built a 3D interactive globe showcasing the frequency of documented terrorist attacks on the Global Terrorism Database in 2012, 2013, and 2014 using WebGL Globe. This data was first acquired from the GTD compiled by the University of Maryland - College Park. I downloaded the data in excel format, omitted unnecessary data, and exported as a JSON file. Since the data from the JSON file is not the same format as the one the Globe receives data, I wrote a JS program (Inside "Conversion Program") to gather all repeated latitude/longitudes by year and set it as the length (magnitude) of the line on the actual globe. (The rounding factor of longitude/latitude as well as the scale factor of the data set (line height) can be adjusted as well in this program) The colors of the line is determined by the length of each line through statistical normalization (longer line - darker color, shorter line - lighter). Red, grey, and black were chosen as the dominant colors since that better reflects the violence of the topic (terrorism). Lastly, I used Photoshop to create a globe image. <p> More information can be found <a href="https://github.com/yyang0087/GTA_Globe">here.</a></p></span>
@@ -138,7 +141,7 @@
           </div>
         </blockquote>
 
-        <blockquote class="col-md-6 col-lg-6" id="mcphersons">
+        <blockquote class="col-md-6 col-lg-3" id="mcphersons">
           <div class="quote">
             <span class="intro">UW-Madison TicketBuddy <br>(2016, iOS, Swift, Xcode, Firebase, Node.js)</span>
             <span class="more">At UW Madison, there are many people trying to buy/sell football tickets the day before/of the game and trying to communicate over other forms of social media such as Facebook and Snapchat. Many of the buyers/sellers have trouble communicating with other buyers/sellers. This app attempts to streamline that process of finding matches and efficiently completing transactions. I used Swift in Xcode to build the foundation of the app. I implemented Firebase to have a database to store the login data. I instantiated a local Node.js server to store the posting data for each game.<p> More information can be found <a href="https://github.com/yyang0087/TicketBuddy">here.</a></p></span>
@@ -146,7 +149,7 @@
           </div>
         </blockquote>
 
-        <blockquote class="col-md-6 col-lg-6" id="johnb">
+        <blockquote class="col-md-6 col-lg-3" id="johnb">
           <div class="quote">
             <span class="intro">PocketNote (2016, iOS, Swift, XCode)</span>
             <span class="more">This is a simple notetaking app that is made to mimic a short, clean, and concise note in a pocket. The design is to minimize clutter, and notifications allow the user to be periodically reminded of the note. <p> More information can be found <a href="https://github.com/yyang0087/PocketNote">here.</a></p></span>
@@ -154,7 +157,7 @@
           </div>
         </blockquote>
 
-        <blockquote class="col-md-6 col-lg-6" id="lorraines">
+        <blockquote class="col-md-6 col-lg-3" id="lorraines">
           <div class="quote">
             <span class="intro">Process Sweeper (2015, Processing, Java)</span>
             <span class="more">This is a mini project during the summer of 2015 that utilizes Processing, a software that allows intuitive visual Java.<p> More information can be found <a href="https://github.com/yyang0087/Process-Sweeper">here.</a></p></span>
@@ -171,7 +174,7 @@
 
 <div class="page" id="contact">
   <div class="container-fluid">
-    <h2>Contact Me</h2>
+    <h2><b>Contact Me</b></h2>
     <div class="row">
 
       <form class="col-lg-6" id="contact-form" method="POST">
