--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
           <!--<img class="icon" src="wp/yang.jpg" alt="Icon">-->
           <h3>YU-LIN <b>YANG</b></h3>
-          <p><i>developer | entrepeneur | videographer</i></p>
+          <p><i>developer | entrepreneur | videographer</i></p>
       </div>
 
 
@@ -111,7 +111,7 @@
         <div class="about_text col-lg-6 col-md-6 fullheight" id="about_text_id">
             <div class="info">
               <h3>About me</h3>
-              <p>I'm a undergraduate student at the University of Wisconsin - Madison. I love to explore, tinker, and create. If I'm not doing school work, you can probably find me making videos, taking photos, or starting a new business.</p><br>
+              <p>I'm an undergraduate student at the University of Wisconsin - Madison. I love to explore, tinker, and create. If I'm not doing school work, you can probably find me making videos, taking photos, or starting a new business.</p><br>
               <p>I believe that all technology should be developed with the user or client in mind. When I work, I focus beyond the functionality of the product by concentrating on the experience of the user. 
               </p><br>
               <p>If you have an idea for something amazing, crazy, or straight up impossible and need an extra hand, hit me up and I'm more than eager to explore the unknown with you.
