--- a/index.html
+++ b/index.html
@@ -112,11 +112,16 @@
             <div class="info">
               <h3>About me</h3>
               <p>I'm an undergraduate student at the University of Wisconsin - Madison. I love to explore, tinker, and create. If I'm not doing school work, you can probably find me making videos, taking photos, or starting a new business.</p><br>
-              <p>I believe that all technology should be developed with the user or client in mind. When I work, I focus beyond the functionality of the product by concentrating on the experience of the user. 
+              <p>My interests involve AI, cryptography, IoT, cloud, mobile and web development. I'm most proficient in iOS and Java development but have intermediate knowledge in HTML, CSS, JS, and jQuery. I believe that all technology should be developed with the user or client in mind. When I work, I focus on beyond the functionality of the product by concentrating on the experience of the end user.
+              </p><br>
+              <p>At school, I'm a web developer for <a href="http://transcend.engineering/" target="_blank">Transcend Engineering</a>, a community that inspires entrepreneurship and innovation. I compete in a variety of business plan competitions, especially ones involving CS. On weekends, I try to travel as much as I could, such as going to Hackathons or visiting nearby cities.
+              </p><br>
+              <p>On the side, I love photography and cinematography. As a <a href="https://www.youtube.com/user/SayW4Wumbo" target="_blank">freelancer</a>, I've made trailers, hype videos, and project videos for school, friends, and real clients. As a <a href="https://www.youtube.com/user/triplexlink" target=_"blank">hobby</a>, I've made videogame cinematics as well.
               </p><br>
               <p>If you have an idea for something amazing, crazy, or straight up impossible and need an extra hand, hit me up and I'm more than eager to explore the unknown with you.
               </p><br>
-              <p>You can find my resume <a href="https://www.dropbox.com/s/q9tr4boxgd3so2t/Yu-Lin_Yang_Resume_2017.pdf?dl=0">here.</a>
+              <p><em>You can find my resume <a href="https://www.dropbox.com/s/q9tr4boxgd3so2t/Yu-Lin_Yang_Resume_2017.pdf?dl=0" target="_blank">here.</a></em>
+              </p>
             </div><!-- info -->
         </div> <!-- doctor -->
 
