--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta name="theme-color" content="#042C45">
   <meta name="apple-mobile-web-app-status-bar-style" content="#042C45">
   <meta name="msapplication-navbutton-color" content="#042C45">
+  <link rel="shortcut icon" href="wp/favicon.gif" />
+  <meta property="og:image" content="wp/preview.png" />
 </head>
 
 
