--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="#042C45">
   <meta name="msapplication-navbutton-color" content="#042C45">
   <link rel="shortcut icon" href="wp/favicon.gif" />
-  <meta property="og:image" content="wp/preview.png" />
+  
+
+  <meta property="og:title" content="Yu-Lin Yang"/>
+  <meta property="og:type" content="profile"/>
+  <meta property="og:url" content="http://www.mysite.com/article/"/>
+  <meta property="og:image" content="http://www.yulinyang.me/wp/preview.png"/>
+  <meta property="og:site_name" content="Yu-Lin's Website"/>
+  <meta property="fb:app_id" content="1234567890987654321"/>
+  <meta property="og:description" content="Welcome to my site! Hope you enjoy!"/>
 </head>
 
 
