--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <meta property="og:title" content="Yu-Lin Yang"/>
   <meta property="og:type" content="profile"/>
-  <meta property="og:url" content="http://www.mysite.com/article/"/>
-  <meta property="og:image" content="http://www.yulinyang.me/wp/preview.png"/>
+  <meta property="og:url" content="http://www.yulinyang.me/"/>
+  <meta property="og:image" content=" http://yulinyang.me/wp/preview.png"/>
   <meta property="og:site_name" content="Yu-Lin's Website"/>
   <meta property="fb:app_id" content="1234567890987654321"/>
   <meta property="og:description" content="Welcome to my site! Hope you enjoy!"/>
