--- a/index.html
+++ b/index.html
@@ -187,21 +187,22 @@
 <div class="page" id="contact">
   <div class="container-fluid">
     <h2><b>Contact Me</b></h2>
-    <div class="row">
-
-      <form class="col-lg-6" id="contact-form" method="POST">
-        <div class="row col-lg-4 col-lg-offset-1">
-          <label class= "contact_title" for="name">Your name:</label><br />
-          <input type="text" name="name" placeholder="" type="text" size"30" /><br />
+    <div class="row" id="cform">
+      <form class="row col-lg-6" id="contact-form" method="POST">
+        <div class ='row col-lg-12' align="center">
+          <div class="row col-lg-5 col-lg-offset-1">
+            <label class= "contact_title" for="name">Your name:</label><br />
+            <input type="text" name="name" placeholder="" type="text" size"30" /><br />
+          </div>
+          <div class="row col-lg-5">
+            <label class= "contact_title" for="email">Your email:</label><br />
+            <input type="email" name="_replyto" placeholder="">
+            <input type="hidden" name="_subject" value="Website contact" />
+          </div>
         </div>
-        <div class="row col-lg-4 col-lg-offset-2">
-          <label class= "contact_title" for="email">Your email:</label><br />
-          <input type="email" name="_replyto" placeholder="">
-          <input type="hidden" name="_subject" value="Website contact" />
-        </div>
-        <div class="row col-lg-12">
+        <div class="row col-lg-12" align="center">
           <label class= "contact_title" for="message">Your message:</label><br />
-          <textarea name="message" placeholder=""rows="10" cols="60"></textarea><br />
+          <textarea name="message" placeholder=""rows="10" cols="36"></textarea><br />
           <input type="text" name="_gotcha" style="display:none" />
         </div>
 
