--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class ="introduction">
 
           <!--<img class="icon" src="wp/yang.jpg" alt="Icon">-->
-          <h3>YU-LIN <b>YANG</b></h3>
+          <h3>YU-LIN <b>YANGster</b></h3>
           <p><i>developer | entrepreneur | videographer</i></p>
       </div>
 
