Fix Project details

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
       <div class="row">
         <blockquote class="col-md-6 col-lg-3" id="globe">
           <div class="quote">
-            <span class="intro"><a href="http://yulinyang.me/GTA_Globe/">3D Infographic of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)</a></span>
-            <span class="more">  I built a 3D interactive globe showcasing the frequency of documented terrorist attacks on the Global Terrorism Database in 2012, 2013, and 2014 using WebGL Globe. This data was first acquired from the GTD compiled by the University of Maryland - College Park. I downloaded the data in excel format, omitted unnecessary data, and exported as a JSON file. Since the data from the JSON file is not the same format as the one the Globe receives data, I wrote a JS program (Inside "Conversion Program") to gather all repeated latitude/longitudes by year and set it as the length (magnitude) of the line on the actual globe. (The rounding factor of longitude/latitude as well as the scale factor of the data set (line height) can be adjusted as well in this program) The colors of the line is determined by the length of each line through statistical normalization (longer line - darker color, shorter line - lighter). Red, grey, and black were chosen as the dominant colors since that better reflects the violence of the topic (terrorism). Lastly, I used Photoshop to create a globe image. <p> More information can be found <a href="https://github.com/yyang0087/GTA_Globe">here.</a></p></span>
+            <span class="intro"><a href="http://yulinyang.me/GTA_Globe/" target="_blank">3D Infographic of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)</a></span>
+            <span class="more">  I built a 3D interactive globe showcasing the frequency of documented terrorist attacks on the Global Terrorism Database in 2012, 2013, and 2014 using WebGL Globe.<p> More information can be found <a href="https://github.com/yyang0087/GTA_Globe" target="_blank">here.</a></p></span>
             <span class="project"></span>
           </div>
         </blockquote>
@@ -156,7 +156,7 @@
         <blockquote class="col-md-6 col-lg-3" id="ticketbuddy">
           <div class="quote">
             <span class="intro">UW-Madison TicketBuddy <br>(2016, iOS, Swift, Xcode, Firebase, Node.js)</span>
-            <span class="more">At UW Madison, there are many people trying to buy/sell football tickets the day before/of the game and trying to communicate over other forms of social media such as Facebook and Snapchat. Many of the buyers/sellers have trouble communicating with other buyers/sellers. This app attempts to streamline that process of finding matches and efficiently completing transactions. I used Swift in Xcode to build the foundation of the app. I implemented Firebase to have a database to store the login data. I instantiated a local Node.js server to store the posting data for each game.<p> More information can be found <a href="https://github.com/yyang0087/TicketBuddy">here.</a></p></span>
+            <span class="more">At UW Madison, there are many people trying to buy/sell football tickets the day before/of the game and trying to communicate over other forms of social media such as Facebook and Snapchat. Many of the buyers/sellers have trouble communicating with other buyers/sellers. This app attempts to streamline that process of finding matches and efficiently completing transactions. I used Swift in Xcode to build the foundation of the app. I implemented Firebase to have a database to store the login data. I instantiated a local Node.js server to store the posting data for each game.<p> More information can be found <a href="https://github.com/yyang0087/TicketBuddy" target="_blank">here.</a></p></span>
             <span class="project"></span>
           </div>
         </blockquote>
@@ -164,7 +164,7 @@
         <blockquote class="col-md-6 col-lg-3" id="pocketnote">
           <div class="quote">
             <span class="intro">PocketNote (2016, iOS, Swift, XCode)</span>
-            <span class="more">This is a simple notetaking app that is made to mimic a short, clean, and concise note in a pocket. The design is to minimize clutter, and notifications allow the user to be periodically reminded of the note. <p> More information can be found <a href="https://github.com/yyang0087/PocketNote">here.</a></p></span>
+            <span class="more">This is a simple notetaking app that is made to mimic a short, clean, and concise note in a pocket. The design is to minimize clutter, and notifications allow the user to be periodically reminded of the note. <p> More information can be found <a href="https://github.com/yyang0087/PocketNote"target="_blank">here.</a></p></span>
             <span class="project"></span>
           </div>
         </blockquote>
@@ -172,7 +172,7 @@
         <blockquote class="col-md-6 col-lg-3" id="sweeper">
           <div class="quote">
             <span class="intro">Process Sweeper (2015, Processing, Java)</span>
-            <span class="more">This is a mini project during the summer of 2015 that utilizes Processing, a software that allows intuitive visual Java.<p> More information can be found <a href="https://github.com/yyang0087/Process-Sweeper">here.</a></p></span>
+            <span class="more">This is a mini project during the summer of 2015 that utilizes Processing, a software that allows intuitive visual Java.<p> More information can be found <a href="https://github.com/yyang0087/Process-Sweeper" target="_blank">here.</a></p></span>
             <span class="project"></span>
           </div>
         </blockquote>          
