Initialize new page

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
 
   <div class="page" id="projects">
     <div id="h2Title"><h2>PROJECTS</h2></div>
-    <div class="container-fluid">
+    <div class="container-fluid" id="proj_cont">
       
       <div class="row">
-        <blockquote class="col-md-6 col-lg-3" id="globe">
+        <blockquote class="proj col-md-6 col-lg-3" id="globe">
           <div class="quote">
             <span class="intro"><a href="http://yulinyang.me/GTA_Globe/" target="_blank">3D Infographic of Global Terrorism Attacks from 2012-2014 (2016, web.gl, html, css, js)</a></span>
             <span class="more">  I built a 3D interactive globe showcasing the frequency of documented terrorist attacks on the Global Terrorism Database in 2012, 2013, and 2014 using WebGL Globe.<p> More information can be found <a href="https://github.com/yyang0087/GTA_Globe" target="_blank">here.</a></p></span>
@@ -153,7 +153,7 @@
           </div>
         </blockquote>
 
-        <blockquote class="col-md-6 col-lg-3" id="ticketbuddy">
+        <blockquote class="proj col-md-6 col-lg-3" id="ticketbuddy">
           <div class="quote">
             <span class="intro">UW-Madison TicketBuddy <br>(2016, iOS, Swift, Xcode, Firebase, Node.js)</span>
             <span class="more">At UW Madison, there are many people trying to buy/sell football tickets the day before/of the game and trying to communicate over other forms of social media such as Facebook and Snapchat. Many of the buyers/sellers have trouble communicating with other buyers/sellers. This app attempts to streamline that process of finding matches and efficiently completing transactions. I used Swift in Xcode to build the foundation of the app. I implemented Firebase to have a database to store the login data. I instantiated a local Node.js server to store the posting data for each game.<p> More information can be found <a href="https://github.com/yyang0087/TicketBuddy" target="_blank">here.</a></p></span>
@@ -161,7 +161,7 @@
           </div>
         </blockquote>
 
-        <blockquote class="col-md-6 col-lg-3" id="pocketnote">
+        <blockquote class="proj col-md-6 col-lg-3" id="pocketnote">
           <div class="quote">
             <span class="intro">PocketNote (2016, iOS, Swift, XCode)</span>
             <span class="more">This is a simple notetaking app that is made to mimic a short, clean, and concise note in a pocket. The design is to minimize clutter, and notifications allow the user to be periodically reminded of the note. <p> More information can be found <a href="https://github.com/yyang0087/PocketNote"target="_blank">here.</a></p></span>
@@ -169,13 +169,17 @@
           </div>
         </blockquote>
 
-        <blockquote class="col-md-6 col-lg-3" id="sweeper">
+        <blockquote class="proj col-md-6 col-lg-3" id="sweeper">
           <div class="quote">
             <span class="intro">Process Sweeper (2015, Processing, Java)</span>
             <span class="more">This is a mini project during the summer of 2015 that utilizes Processing, a software that allows intuitive visual Java.<p> More information can be found <a href="https://github.com/yyang0087/Process-Sweeper" target="_blank">here.</a></p></span>
             <span class="project"></span>
           </div>
-        </blockquote>          
+        </blockquote>
+
+
+
+
       </div>
     </div><!-- container -->
   </div><!-- testimonials page -->
