--- a/index.html
+++ b/index.html
@@ -197,17 +197,17 @@
       <form class="col-lg-6" id="contact-form" method="POST">
         <div class ='row col-lg-12'>
           <div class="row col-lg-5 col-lg-offset-1">
-            <label class= "contact_title" for="name">Your name:</label><br />
+            <label class= "contact_title" for="name" style="font-weight:normal;">Your name:</label><br />
             <input type="text" name="name" placeholder="" type="text" size"30" /><br />
           </div>
           <div class="row col-lg-5">
-            <label class= "contact_title" for="email">Your email:</label><br />
+            <label class= "contact_title" for="email" style="font-weight:normal;">Your email:</label><br />
             <input type="email" name="_replyto" placeholder="">
             <input type="hidden" name="_subject" value="Website contact" />
           </div>
         </div>
         <div class="row col-lg-12">
-          <label class= "contact_title" for="message">Your message:</label><br />
+          <label class= "contact_title" for="message" style="font-weight:normal;">Your message:</label><br />
           <textarea name="message" placeholder=""rows="10" cols="36"></textarea><br />
           <input type="text" name="_gotcha" style="display:none" />
         </div>
