--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
       </div>
     </div><!-- container -->
   </div><!-- testimonials page -->
+  <div id="h3Title"><h3>I apologize for the inconvenience :-)</h3></div>
 </div><!-- main -->
 
 
